Optimize API Performance and User Experience

--- a/.env.new
+++ b/.env.new
@@ -5,6 +5,14 @@ VITE_CLERK_PUBLISHABLE_KEY=pk_test_Y2hhcm1lZC1vcnl4LTQuY2xlcmsuYWNjb3VudHMuZGV2J
 # Gemini AI API
 VITE_GEMINI_API_KEY=AIzaSyCroUSXvPwLGnHynNycflnaF5E3AFWXTrU
 VITE_GEMINI_API_KEY_2=AIzaSyD1-nxzRAXJnCB5BUwoJuzxlzmDhY0WHCQ
+VITE_GEMINI_API_KEY_3=
+VITE_GEMINI_API_KEY_4=
+VITE_GEMINI_API_KEY_5=
+VITE_GEMINI_API_KEY_6=
+VITE_GEMINI_API_KEY_7=
+VITE_GEMINI_API_KEY_8=
+VITE_GEMINI_API_KEY_9=
+VITE_GEMINI_API_KEY_10=
 
 # Firebase Configuration
 VITE_FIREBASE_API_KEY=AIzaSyDpTkzTlqgl5kvCogzy_LQTVyarO-eGYuM
